# web-scraper-chatbot

./: .gitignore  README.md  docker-compose.yml  poc_agno.py  pyproject.toml  requirements.txt  setup_postgres.md  setup_postgres.sh  start_backend.sh  start_frontend.sh
backend/: api.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.css  App.jsx  index.css
